Critical bugfix to the Entur Sandbox GraphQL Transmodel API after upgrading the GraphQL library. Add pageInfo type used by the Relay (paging functionality).